[metadata]
name = somata
version = 0.3.2
description = State-space Oscillator Modeling And Time-series Analysis
author = Mingjian He
author_email = mh105@mit.edu
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords = state-space oscillator time-series
url = https://github.com/mh105/somata
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.22
    codetiming
    colorcet
    joblib
    kneed
    matplotlib
    scipy
    spectrum
    tqdm
